Some cleanup of knownProblems.

--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -26,36 +26,17 @@
 	<li>Flying Saucer related issues:
 		<ul>
 			<li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
-				<br/>See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>
+				<br/>See <a href="https://code.google.com/archive/p/flying-saucer/issues/79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>
 			</li>
 
 			<li>The first line of the message in HTML view is not properly indented if it starts with whitespace. You can see this effect by examining the event created by LogPinupLargeRunnable (executed via "Log ASCII"). The HTML created is actually correct.
-				<br/>See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=125">Issue 125: &lt;pre&gt; ignores leading whitespace</a>
+				<br/>See <a href="https://code.google.com/archive/p/flying-saucer/issues/125">Issue 125: &lt;pre&gt; ignores leading whitespace</a>
 			</li>
 
 			<li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
-				<br/>See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=105">Issue 105: URLs with anchors</a>
+				<br/>See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 105: URLs with anchors</a>
 			</li>
 		</ul>
-	</li>
-
-    <li>'Copy event' was meant to copy the event as HTML but this is severely broken in Java.<br/>
-        There's no workaround available but this will *probably* be fixed in JDK7.
-        So for now, 'Copy event' copies the XHTML code as text...<br/>
-        See <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6392086">bug #6392086</a>.
-    </li>
-
-	<li>Preferences dialog is obviously not finished right now :)</li>
-
-	<li>The 'Send to' functionality isn't working as expected if the network infrastructure changes.
-		It should work but doesn't. I think it's a JmDNS problem but I have to investigate further.
-	</li>
-
-	<li>Lilith may hang during startup while creating the preferences dialog. Just restart Lilith in that rare case.<br/>
-		This is caused by <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6995182">bug #6995182</a>
-		and I can't do anything about it.<br/>
-		Sorry about it. It's a stupid Java-MediaTracker-ColorChooser-Bug with no workaround available.<br/>
-		m(
 	</li>
 </ul>
 <p><a href="#top">Back to top.</a></p>
