--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -42,7 +42,7 @@
 	<li><a href="idea.xhtml">IDEA integration</a></li>
 	<li><a href="faq.xhtml">FAQ</a></li>
 	<li><a href="used-software.xhtml">Used Software</a></li>
-	<li><a href="knownProblems.xhtml">Known Problems</a></li>
+	<li><a href="knownIssues.xhtml">Known Issues</a></li>
 </ul>
 
 <p><a href="#top">Back to top.</a></p>
