--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -108,7 +108,7 @@
 			<li>Fixed handling of invalid XML created by <code>java.util.logging.XMLFormatter</code>. This fixes <a href="https://github.com/huxi/lilith/issues/26">issue #26</a>.</li>
 			<li>Being less strict about the required Java version. It seems certain Linux distros have a Java version string like <code>1.8.0_66-internal</code> which is - strictly speaking - less than <code>1.8.0_66</code> since <code>-internal</code> is a pre-release identifier. Lilith will now accept versions like this if ignoring the pre-release identifier satisfies the version requirement.</li>
 			<li>Making sure selected event is reset when last view is closed.</li>
-			<li>log4j2 2.8.1, slf4j 1.7.24, Logback 1.2.1, jackson 2.8.7, Spring 4.3.7, Groovy 2.4.9, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.64, commons-lang3 3.5</li>
+			<li>log4j2 2.8.1, slf4j 1.7.24, Logback 1.2.1, jackson 2.8.7, Spring 4.3.7, Groovy 2.4.9, aspectj 1.8.10, httpclient 4.5.3, httpcore 4.4.6, commons-io 2.5, Thymeleaf 2.1.5, protobuf 3.2.0, jcommander 1.64, commons-lang3 3.5, flying-saucer 9.1.4</li>
 		</ul>
 		<h3>Security</h3>
 		<ul>
@@ -125,12 +125,8 @@ See <a href="https://jira.qos.ch/browse/LOGBACK-1257">LOGBACK-1257 - Invalid fil
 			<li>log4j 1 won't be able to send <code>ClassLoaderName</code>, <code>ModuleName</code> and <code>ModuleVersion</code> for the call location of the event. Search <code>LOG4J_MODULE</code> in the source to take a look at the problem. Since <a href="https://blogs.apache.org/foundation/entry/apache_logging_services_project_announces">Log4j 1 End-Of-Life</a> has been announced 2015-08-06, chances are pretty slim that this will be fixed. Upgrade to <a href="http://logging.apache.org/log4j/2.x/">log4j 2</a> or <a href="https://logback.qos.ch/">Logback</a>.</li>
 			<li>Flying Saucer related issues:
 <ul><li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li><li>The first line of the message in HTML view is not properly indented if it starts with whitespace.
-You can see this effect by examining the event created by LogPinupLargeRunnable (executed via "Log ASCII").
-The HTML created is actually correct.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=125">Issue 125: &lt;pre&gt; ignores leading whitespace</a>.</li><li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
-See <a href="http://code.google.com/p/flying-saucer/issues/detail?id=105">Issue 105: URLs with anchors</a>.</li><li>A regression introduced in 9.0.7 prevents me from upgrading to a newer version of Flying Saucer.
-See <a href="https://code.google.com/archive/p/flying-saucer/issues/262">Issue 262: Regression resolving stylesheets relative to docroot</a>.</li></ul></li>
+See <a href="https://code.google.com/archive/p/flying-saucer/issues/79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li><li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
+See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 105: URLs with anchors</a>.</li></ul></li>
 			<li><a href="https://java.net/jira/browse/GLAZEDLISTS-469">GLAZEDLISTS-469 - AutoCompleteSupport: Arrowing down on the popup and pressing enter fails to update combobox</a> is happening in the find panel on macOS. Select the correct entry with the mouse as a workaround.</li>
 		</ul>
 		<h2>Previous Versions</h2>
