--- a/lilith/src/main/resources/help/conditions.xhtml
+++ b/lilith/src/main/resources/help/conditions.xhtml
@@ -76,7 +76,7 @@
 
 <h2 id="saved">Saved conditions</h2>
 
-<p>You can save conditions using "Search" =&gt; "Save condition..." or the
+<p>You can save conditions using "Search" =&gt; "Save condition…" or the
 	respective entry in the popup menu.<br/>
 	The shortcut for this functionality is *command*-I.</p>
 <p>Saved conditions can be configured in the <a href="prefs://Conditions">Conditions preferences</a>.</p>
