--- a/lilith/src/main/resources/help/file-appender.xhtml
+++ b/lilith/src/main/resources/help/file-appender.xhtml
@@ -33,14 +33,14 @@
 </appender>]]></code></pre>
 
 
-<p>You also have to attach the appender to some logger, e.g. the root logger...</p>
+<p>You also have to attach the appender to some logger, e.g. the root logger…</p>
 		<pre><code><![CDATA[<root>
   <level value="INFO"/>
   <appender-ref ref="FILE"/>
 </root>]]></code></pre>
 
 
-<p>... or a specific logger...</p>
+<p>… or a specific logger…</p>
 		<pre><code><![CDATA[<logger name="foo.Bar">
   <level value="DEBUG"/>
   <appender-ref ref="FILE"/>
