--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -14,7 +14,7 @@
 
 <ul>
 	<li><a href="story.xhtml">The story of Lilith</a></li>
-	<li><a href="contact.xhtml">Contact, Feature Requests, Bug Reports...</a>
+	<li><a href="contact.xhtml">Contact, Feature Requests, Bug Reports…</a>
 		<ul>
 			<li><a href="love.xhtml">Show some Love</a></li>
 		</ul>
