--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -25,10 +25,10 @@
 
 <dl>
 	<dt>F1</dt>
-	<dd>Show help...</dd>
+	<dd>Show help…</dd>
 
 	<dt>^+&#8679;+O</dt>
-	<dd>Open inactive log...</dd>
+	<dd>Open inactive log…</dd>
 
 	<dt>^+&#8679;+X</dt>
 	<dd>Remove all inactive logs</dd>
