--- a/lilith/src/main/resources/help/knownIssues.xhtml
+++ b/lilith/src/main/resources/help/knownIssues.xhtml
@@ -12,7 +12,7 @@
 
 <h1 id="top">Known Issues</h1>
 
-<p>You can find a list of known issues in the "Check for Update..." dialog.</p>
+<p>You can find a list of known issues in the "Check for Update…" dialog.</p>
 
 <p><a href="#top">Back to top.</a></p>
 </body>
