--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -10,7 +10,7 @@
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1 id="top">Show some Love...</h1>
+<h1 id="top">Show some Love…</h1>
 <p>
 	You like Lilith? Just tell me!
 </p>
@@ -27,7 +27,7 @@
 </p>
 
 <h2>So what can I do?</h2>
-<p>Oh, you have lots of options to give me a virtual hug...</p>
+<p>Oh, you have lots of options to give me a virtual hug…</p>
 <ul>
 	<li>
 		You could donate in <a href="https://onename.io/lilith">Bitcoin</a>.<br />
@@ -35,12 +35,12 @@
 		19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn</a>
 	</li>
 	<li>
-		... or Litecoin.<br />
+		… or Litecoin.<br />
 		<a href="litecoin:LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV"><img alt="LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV" src="images/litecoin.png"/><br/>
 		LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV</a>
 	</li>
 	<li>
-		... or Dogecoin.<br />
+		… or Dogecoin.<br />
 		<a href="dogecoin:DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm"><img alt="DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm" src="images/dogecoin.png"/><br/>
 		DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm</a>
 	</li>
@@ -75,7 +75,7 @@
 
 <h2 id="breasts">Breasts?</h2>
 <p>
-	<img src="images/ratings.png"  alt="Ratings..."/><br />
+	<img src="images/ratings.png"  alt="Ratings…"/><br />
 	<a href="#naked">Back</a>
 </p>
 <p><a href="#top">Back to top.</a></p>
