--- a/lilith/src/main/resources/help/sources.xhtml
+++ b/lilith/src/main/resources/help/sources.xhtml
@@ -22,7 +22,7 @@
 <h2 id="sourceNames">Source-Names</h2>
 
 <p>It's possible to give a certain source a name, e.g. the source "127.0.0.1" would likely be named "localhost",
-	using "View" =&gt; "Edit source name...".
+	using "View" =&gt; "Edit source name…".
 	The shortcut for this functionality is *command*-B.<br/>
 	Named sources are used in two places:
 </p>
