Preparing for 8.1.0 release.

--- a/releases/8.1.0.xhtml
+++ b/releases/8.1.0.xhtml
@@ -10,9 +10,9 @@
 		<h1>Lilith 8.1.0</h1>
 		<div>
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.1.0">Download Now!
-		<br />(Released: 2017-xx-xx)</a>
+		<br />(Released: 2017-03-15)</a>
 		</div>
-		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version.</p>
+		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+158.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		<h2>Changelog</h2>
