--- a/releases/8.1.1.xhtml
+++ b/releases/8.1.1.xhtml
@@ -3,22 +3,26 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Lilith 8.2.0 Release Notes</title>
+		<title>Lilith 8.1.1 Release Notes</title>
 		<link href="help.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<h1>Lilith 8.2.0</h1>
+		<h1>Lilith 8.1.1</h1>
 		<div>
-			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.2.0">Download Now!
-		<br />(Released: 2017-xx-xx)</a>
+			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.1.1">Download Now!
+		<br />(Released: 2017-03-17)</a>
 		</div>
+		<p>This minor update mainly upgrades slf4j and logback versions to address
+		<a href="https://github.com/huxi/lilith/issues/29">a problem concerning serialized events with Markers</a>.</p>
+		<p>Make sure to upgrade the versions in your application to slf4j 1.7.25 and logback 1.2.2.</p>
+		<p>See release notes of <a href="http://lilithapp.com/releases/8.1.0.xhtml">8.1.0</a> for the full list of changes.</p>
 		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+158.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		<h2>Changelog</h2>
 		<h3>Added</h3>
 		<ul>
-			<li>Nothing.</li>
+			<li>Added dependency versions to Troubleshooting section of preferences. This was suggested in <a href="https://github.com/huxi/lilith/issues/29">issue #29</a> by <a href="https://github.com/Pesegato">@Pesegato</a>.</li>
 		</ul>
 		<h3>Changed</h3>
 		<ul>
@@ -34,7 +38,7 @@
 		</ul>
 		<h3>Fixed</h3>
 		<ul>
-			<li>Nothing.</li>
+			<li>cglib 3.2.5, slf4j 1.7.25, logback 1.2.2</li>
 		</ul>
 		<h3>Security</h3>
 		<ul>
@@ -57,9 +61,6 @@ See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 1
 		</ul>
 		<h2>Previous Versions</h2>
 		<ul>
-			<li>
-				<a href="http://lilithapp.com/releases/8.1.1.xhtml">8.1.1</a>
-			</li>
 			<li>
 				<a href="http://lilithapp.com/releases/8.1.0.xhtml">8.1.0</a>
 			</li>
