--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -17,44 +17,72 @@
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		<h2>Changelog</h2>
 		<h3>Added</h3>
+
 		<ul>
-			<li>Nothing.</li>
+			<li>Added Previous and Next buttons to toolbar.</li>
+			<li>Added lots of missing mnemonics.</li>
 		</ul>
+
 		<h3>Changed</h3>
+
 		<ul>
-			<li>Nothing.</li>
+			<li>Refactored actions and icon handling.</li>
+			<li>Don't add null events to global logs.</li>
+			<li>Unchecking "Enable global logs." in Preferences is now deleting existing global log files automatically.</li>
+			<li>Keyboard help will now always be up-to-date.</li>
 		</ul>
+
 		<h3>Deprecated</h3>
+
 		<ul>
 			<li>Nothing.</li>
 		</ul>
+
 		<h3>Removed</h3>
+
 		<ul>
-			<li>Nothing.</li>
+			<li>Previous and Next buttons in find panel.</li>
 		</ul>
+
 		<h3>Fixed</h3>
+
 		<ul>
-			<li>Nothing.</li>
+			<li>Fixed initial enabled state of "Go to source".</li>
+			<li>Fixed enabled state of "Edit" menu. Mustn't be disabled anymore because "Paste StackTraceElement" is always available.</li>
+			<li>Fixed enabled state of "Copy selection".</li>
+			<li>Menu entries related to global logs are now disabled if "Enable global logs." is unchecked in Preferences.</li>
+			<li>Groovy 2.4.10, Logback 1.2.3, flying-saucer 9.1.5, jackson 2.8.8, log4j2 2.8.2</li>
 		</ul>
+
 		<h3>Security</h3>
+
 		<ul>
 			<li>Nothing.</li>
 		</ul>
+
 		<h3>Known issues</h3>
+
 		<ul>
 			<li>logback-access <code>AccessEvent</code> sent by <code>SocketAppender</code> isn't guaranteed to be deserializable at the moment. You can use the Lilith Multiplex Socket Appender in the meantime.
 See <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Logback 1.1.0 introduced some message formatting regressions.
 See <a href="http://jira.qos.ch/browse/LOGBACK-1183">LOGBACK-1183 - Message formatting regression</a>.</li>
-			<li><del>Binary Lilith log files will only work in case of <code>append=false</code>.</del> Implemented a workaround.
-See <a href="https://jira.qos.ch/browse/LOGBACK-1257">LOGBACK-1257 - Invalid files in case of append=true and Encoder with non-null headerBytes() / footerBytes()</a></li>
+			<li>
+				<del>Binary Lilith log files will only work in case of <code>append=false</code>.</del> Implemented a workaround.
+See <a href="https://jira.qos.ch/browse/LOGBACK-1257">LOGBACK-1257 - Invalid files in case of append=true and Encoder with non-null headerBytes() / footerBytes()</a>
+			</li>
 			<li>log4j 1 won't be able to send <code>ClassLoaderName</code>, <code>ModuleName</code> and <code>ModuleVersion</code> for the call location of the event. Search <code>LOG4J_MODULE</code> in the source to take a look at the problem. Since <a href="https://blogs.apache.org/foundation/entry/apache_logging_services_project_announces">Log4j 1 End-Of-Life</a> has been announced 2015-08-06, chances are pretty slim that this will be fixed. Upgrade to <a href="http://logging.apache.org/log4j/2.x/">log4j 2</a> or <a href="https://logback.qos.ch/">Logback</a>.</li>
 			<li>Flying Saucer related issues:
 <ul><li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
-See <a href="https://code.google.com/archive/p/flying-saucer/issues/79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li><li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
-See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 105: URLs with anchors</a>.</li></ul></li>
-			<li><a href="https://java.net/jira/browse/GLAZEDLISTS-469">GLAZEDLISTS-469 - AutoCompleteSupport: Arrowing down on the popup and pressing enter fails to update combobox</a> is happening in the find panel on macOS. Select the correct entry with the mouse as a workaround.</li>
+See <a href="https://code.google.com/archive/p/flying-saucer/issues/79">Issue 79: SelectionHighlighter not compatible with ScalableXHTMLPanel</a>.</li>
+					<li>Jumping to anchors is currently not supported so the navigation in help and details view isn't as good as it could be.
+See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 105: URLs with anchors</a>.</li>
+				</ul>
+			</li>
+			<li>
+				<a href="https://java.net/jira/browse/GLAZEDLISTS-469">GLAZEDLISTS-469 - AutoCompleteSupport: Arrowing down on the popup and pressing enter fails to update combobox</a> is happening in the find panel on macOS. Select the correct entry with the mouse as a workaround.</li>
 		</ul>
+		
 		<h2>Previous Versions</h2>
 		<ul>
 			<li>
