--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -12,7 +12,7 @@
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.2.0">Download Now!
 		<br />(Released: 2017-xx-xx)</a>
 		</div>
-		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+158.</p>
+		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+164.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		<h2>Changelog</h2>
@@ -21,6 +21,8 @@
 		<ul>
 			<li>Added Previous and Next buttons to toolbar.</li>
 			<li>Added lots of missing mnemonics.</li>
+			<li>If the connection is lost then Message/RequestURI in table will now show "Connection closed." instead of nothing.</li>
+			<li>Added smooth horizontal table scrolling option that is enabled by default.</li>
 		</ul>
 
 		<h3>Changed</h3>
@@ -51,6 +53,8 @@
 			<li>Fixed enabled state of "Edit" menu. Mustn't be disabled anymore because "Paste StackTraceElement" is always available.</li>
 			<li>Fixed enabled state of "Copy selection".</li>
 			<li>Menu entries related to global logs are now disabled if "Enable global logs." is unchecked in Preferences.</li>
+			<li>Added more dependencies and entries to the deserialization whitelist. This is essentially necessary because <code>logback-access</code> does not have an <code>AccessEventVO</code>. See also <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
+			<li>Not all event producers expect a heartbeat.</li>
 			<li>Groovy 2.4.10, Logback 1.2.3, flying-saucer 9.1.5, jackson 2.8.8, log4j2 2.8.2</li>
 		</ul>
 
