--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -55,7 +55,7 @@
 			<li>Menu entries related to global logs are now disabled if "Enable global logs." is unchecked in Preferences.</li>
 			<li>Added more dependencies and entries to the deserialization whitelist. This is essentially necessary because <code>logback-access</code> does not have an <code>AccessEventVO</code>. See also <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Not all event producers expect a heartbeat.</li>
-			<li>Groovy 2.4.10, Logback 1.2.3, flying-saucer 9.1.5, jackson 2.8.8, log4j2 2.8.2</li>
+			<li>Groovy 2.4.10, Logback 1.2.3, flying-saucer 9.1.5, jackson 2.8.8, log4j2 2.8.2, junique 1.0.4</li>
 		</ul>
 
 		<h3>Security</h3>
