--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -12,7 +12,7 @@
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.2.0">Download Now!
 		<br />(Released: 2017-xx-xx)</a>
 		</div>
-		<p>This version of Lilith demands Java 8 update 121 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+164.</p>
+		<p>This version of Lilith demands Java 8 update 131 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+164.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		<h2>Changelog</h2>
@@ -32,6 +32,7 @@
 			<li>Don't add null events to global logs.</li>
 			<li>Unchecking "Enable global logs." in Preferences is now deleting existing global log files automatically.</li>
 			<li>Keyboard help will now always be up-to-date.</li>
+			<li>Demand Java 8 <code>1.8.0_131</code>.</li>
 		</ul>
 
 		<h3>Deprecated</h3>
