--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -21,7 +21,7 @@
 	</tr>
 	<tr>
 		<td><a href="http://ant.apache.org">Apache Ant</a></td>
-		<td><a href="http://ant.apache.org/license.html">The Apache Software License Version, Version 2.0</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
 		<td><a href="http://www.antlr.org/">ANTLR</a></td>
@@ -33,30 +33,32 @@
 	</tr>
 	<tr>
 		<td><a href="http://excalibur.apache.org/index.html">Avalon Framework</a></td>
-		<td><a href="http://excalibur.apache.org/license.html">The Apache Software License Version, Version 2.0</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
 		<td><a href="http://hc.apache.org/httpcomponents-client-ga/">HttpComponents HttpClient</a></td>
-		<td>The Apache Software License Version, Version 2.0</td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
-		<td><a href="http://hc.apache.org/httpcomponents-core-ga/">HttpComponents HttpClient</a></td>
-		<td>The Apache Software License Version, Version 2.0</td>
+		<td><a href="http://hc.apache.org/httpcomponents-core-ga/">HttpComponents HttpCore</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
-		<td><a href="http://commons.apache.org/codec/">Commons Codec</a></td>
-		<td><a href="http://commons.apache.org/codec/license.html">The Apache Software License Version, Version 2.0</a>
+		<td><a href="http://commons.apache.org/proper/commons-codec/">Commons Codec</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="http://commons.apache.org/io/">Commons IO</a></td>
-		<td><a href="http://commons.apache.org/io/license.html">The Apache Software License Version, Version 2.0</a>
-		</td>
+		<td><a href="http://commons.apache.org/proper/commons-io/">Commons IO</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
-		<td><a href="http://commons.apache.org/lang/">Commons Lang</a></td>
-		<td><a href="http://commons.apache.org/lang/license.html">The Apache Software License Version, Version 2.0</a>
-		</td>
+		<td><a href="http://commons.apache.org/proper/commons-lang/">Commons Lang</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
+	</tr>
+	<tr>
+		<td><a href="http://commons.apache.org/proper/commons-text/">Commons Text</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
 		<td><a href="https://github.com/flyingsaucerproject/flyingsaucer">Flying Saucer / xhtmlrenderer</a></td>
