--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -12,7 +12,7 @@
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.2.0">Download Now!
 		<br />(Released: 2017-xx-xx)</a>
 		</div>
-		<p>This version of Lilith demands Java 8 update 131 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+164.</p>
+		<p>This version of Lilith demands Java 8 update 131 or higher and will says so if you try to start it with an older version. It has also been tested with Java 9-ea+176.</p>
 		<p>You can still receive event from previous versions so if your application is still running Java 7 or lower just keep using the 0.9.44 artifacts.<br />
 		Keep in mind that <a href="http://www.oracle.com/technetwork/java/eol-135779.html">Java SE 7 End of Public Updates</a> has already been reached.</p>
 		<h2>Changelog</h2>
@@ -44,7 +44,8 @@
 		<h3>Removed</h3>
 
 		<ul>
-			<li>Previous and Next buttons in find panel.</li>
+			<li>"Previous" and "Next" buttons in find panel.</li>
+			<li>"Pause" action. Pausing only paused updating of the table, not receiving of events. This was confusing (even me) and served no actual purpose. This action was a left-over from the early days of Lilith when it was used for debugging during development.</li>
 		</ul>
 
 		<h3>Fixed</h3>
@@ -56,7 +57,7 @@
 			<li>Menu entries related to global logs are now disabled if "Enable global logs." is unchecked in Preferences.</li>
 			<li>Added more dependencies and entries to the deserialization whitelist. This is essentially necessary because <code>logback-access</code> does not have an <code>AccessEventVO</code>. See also <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Not all event producers expect a heartbeat.</li>
-			<li>Groovy 2.4.10, Logback 1.2.3, flying-saucer 9.1.5, jackson 2.8.8, log4j2 2.8.2, junique 1.0.4</li>
+			<li>Groovy 2.4.12, Logback 1.2.3, flying-saucer 9.1.6, spring 4.3.9, jackson 2.8.9, log4j2 2.8.2, junique 1.0.4, jcommander 1.72, protobuf 3.3.1, commons-lang 3.6, commons-text 1.1</li>
 		</ul>
 
 		<h3>Security</h3>
