Added “Find next/previous active” toolbar buttons.

--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -19,7 +19,8 @@
 		<h3>Added</h3>
 
 		<ul>
-			<li>Added Previous and Next buttons to toolbar.</li>
+			<li>Added "Find previous active" and "Find next active" buttons to toolbar. </li>
+			<li>Added "Find previous" and "Find next" buttons to toolbar.</li>
 			<li>Added lots of missing mnemonics.</li>
 			<li>If the connection is lost then Message/RequestURI in table will now show "Connection closed." instead of nothing.</li>
 			<li>Added smooth horizontal table scrolling option that is enabled by default.</li>
@@ -28,6 +29,7 @@
 		<h3>Changed</h3>
 
 		<ul>
+			<li>Changed icons for "Find previous active" and "Find next active". They now differ from "Find previous" and "Find next" as they should.</li>
 			<li>Refactored actions and icon handling.</li>
 			<li>Don't add null events to global logs.</li>
 			<li>Unchecking "Enable global logs." in Preferences is now deleting existing global log files automatically.</li>
