log4j2 2.9 JSON, YAML, XML

--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -33,6 +33,7 @@
 					<li><a href="file-appender.xhtml">FileAppender configuration</a></li>
 				</ul>
 			</li>
+			<li><a href="log4j2.xhtml">Log4j 2 SocketAppender</a></li>
 			<li><a href="log4j.xhtml">LOG4J SocketAppender</a></li>
 			<li><a href="jul.xhtml">java.util.logging SocketHandler</a></li>
 		</ul>
