--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -208,7 +208,7 @@
 <p><a href="#top">Back to top.</a></p>
 
 <h2>logback-classic SocketAppender</h2>
-Lilith listens for connections of the Logback SocketAppender on port 4560.
+Lilith listens for connections of the Logback SocketAppender on port 4445 and port 4560.
 
 <p>Add the following dependency to your applications <code>pom.xml</code> file:</p>
 		<pre><code><![CDATA[<dependency>
