--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -80,7 +80,7 @@
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
 	</tr>
 	<tr>
-		<td><a href="http://publicobject.com/glazedlists/">Glazed Lists</a></td>
+		<td><a href="http://www.glazedlists.com/">Glazed Lists</a></td>
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
 	</tr>
 	<tr>
