--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -61,7 +61,7 @@
 			<li>Menu entries related to global logs are now disabled if "Enable global logs." is unchecked in Preferences.</li>
 			<li>Added more dependencies and entries to the deserialization whitelist. This is essentially necessary because <code>logback-access</code> does not have an <code>AccessEventVO</code>. See also <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Not all event producers expect a heartbeat.</li>
-			<li>Groovy 2.4.12, Logback 1.2.3, flying-saucer 9.1.6, spring 4.3.10, jackson 2.9.0, log4j2 2.8.2, junique 1.0.4, jcommander 1.72, protobuf 3.3.1, commons-lang 3.6, commons-text 1.1</li>
+			<li>Groovy 2.4.12, Logback 1.2.3, flying-saucer 9.1.6, spring 4.3.10, jackson 2.9.0, log4j2 2.8.2, junique 1.0.4, jcommander 1.72, protobuf 3.3.1, commons-lang 3.6, commons-text 1.1, glazedlists 1.10.0</li>
 		</ul>
 
 		<h3>Security</h3>
@@ -90,7 +90,7 @@ See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 1
 				</ul>
 			</li>
 			<li>
-				<a href="https://java.net/jira/browse/GLAZEDLISTS-469">GLAZEDLISTS-469 - AutoCompleteSupport: Arrowing down on the popup and pressing enter fails to update combobox</a> is happening in the find panel on macOS. Select the correct entry with the mouse as a workaround.</li>
+				<a href="https://github.com/glazedlists/glazedlists/issues/485">glazedlists #485 - AutoCompleteSupport: Arrowing down on the popup and pressing enter fails to update combobox</a> is happening in the find panel on macOS. Select the correct entry with the mouse as a workaround.</li>
 		</ul>
 		
 		<h2>Previous Versions</h2>
