Fixed several split package issues.

--- a/lilith/src/main/resources/help/file-appender.xhtml
+++ b/lilith/src/main/resources/help/file-appender.xhtml
@@ -117,7 +117,7 @@
   </appender>
   <appender name="FILE" class="ch.qos.logback.core.FileAppender">
     <file>access.lilith</file>
-    <encoder class="de.huxhorn.lilith.logback.encoder.AccessLilithEncoder"/>
+    <encoder class="de.huxhorn.lilith.logback.encoder.access.AccessLilithEncoder"/>
   </appender>
 
   <appender-ref ref="FILE" />
