Use preferencesDialog as parent of JOptionPane.

--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -71,7 +71,8 @@
 			<li>Menu entries related to global logs are now disabled if "Enable global logs." is unchecked in Preferences.</li>
 			<li>Added more dependencies and entries to the deserialization whitelist. This is essentially necessary because <code>logback-access</code> does not have an <code>AccessEventVO</code>. See also <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Not all event producers expect a heartbeat.</li>
-			<li>Logback 1.2.3, log4j2 2.9.1, Groovy 2.4.12, jackson 2.9.1, spring 5.0.0, protobuf 3.4.0, junique 1.0.4, jcommander 1.72, commons-lang 3.6, commons-text 1.1, flying-saucer 9.1.7, glazedlists 1.10.0, aspectj 1.8.11, httpcore 4.4.8</li>
+			<li>Made sure that "You have changed the look &amp; feel." and "You have changed the application path." dialogs aren't hidden by the preferences dialog. </li>
+			<li>Logback 1.2.3, log4j2 2.9.1, Groovy 2.4.12, jackson 2.9.1, spring 5.0.1, protobuf 3.4.0, junique 1.0.4, jcommander 1.72, commons-lang 3.6, commons-text 1.1, flying-saucer 9.1.7, glazedlists 1.10.0, aspectj 1.8.12, httpcore 4.4.8</li>
 			<li>Fixed several split package issues. Because of this, some classes have changed package names:
 <ul><li>the two most commonly used classes <code>de.huxhorn.lilith.logback.appender.ClassicMultiplexSocketAppender</code> and <code>de.huxhorn.lilith.logback.encoder.ClassicLilithEncoder</code> have not been moved. </li>
 					<li>
