New crypto addresses.

--- a/lilith/src/main/resources/help/love.xhtml
+++ b/lilith/src/main/resources/help/love.xhtml
@@ -30,20 +30,26 @@
 <p>Oh, you have lots of options to give me a virtual hug…</p>
 <ul>
 	<li>
-		You could donate in <a href="https://onename.io/lilith">Bitcoin</a>.<br />
-		<a href="bitcoin:19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn"><img alt="19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn" src="images/bitcoin.png"/><br/>
-		19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn</a>
+		You could donate in Bitcoin.<br />
+		<a href="bitcoin:3MwD28iwF3faSvKUBYNe2XuCzStBi1NzAH"><img alt="3MwD28iwF3faSvKUBYNe2XuCzStBi1NzAH" src="images/LilithBTC.png"/><br/>
+			3MwD28iwF3faSvKUBYNe2XuCzStBi1NzAH</a>
+	</li>
+	<li>
+		… or Bitcoin Cash.<br />
+		<a href="bitcoincash:18srjoaCdvV3i9XWKjDcnQA6UyNMxky5GA"><img alt="18srjoaCdvV3i9XWKjDcnQA6UyNMxky5GA" src="images/LilithBCH.png"/><br/>
+			18srjoaCdvV3i9XWKjDcnQA6UyNMxky5GA</a>
+	</li>
+	<li>
+		… or Zcash.<br />
+		<a href="zcash:t1TLsUKLsNczQbG4PVx7iNEyP5LtKauL3gr"><img alt="t1TLsUKLsNczQbG4PVx7iNEyP5LtKauL3gr" src="images/LilithZEC.png"/><br/>
+			t1TLsUKLsNczQbG4PVx7iNEyP5LtKauL3gr</a>
 	</li>
 	<li>
 		… or Litecoin.<br />
-		<a href="litecoin:LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV"><img alt="LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV" src="images/litecoin.png"/><br/>
-		LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV</a>
+		<a href="litecoin:MPYHQnhjtv9nVFCoHF3UyPJAvhwqqZ2snx"><img alt="MPYHQnhjtv9nVFCoHF3UyPJAvhwqqZ2snx" src="images/LilithLTC.png"/><br/>
+			MPYHQnhjtv9nVFCoHF3UyPJAvhwqqZ2snx</a>
 	</li>
-	<li>
-		… or Dogecoin.<br />
-		<a href="dogecoin:DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm"><img alt="DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm" src="images/dogecoin.png"/><br/>
-		DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm</a>
-	</li>
+
 	<li>
 		You could <a href="https://flattr.com/thing/15170/Lilith-Logging-and-AccessEvent-Monitor-for-Logback">flattr</a>
 		Lilith.
@@ -61,9 +67,6 @@
 	</li>
 	<li>
 		You could endorse me on <a href="https://coderwall.com/huxi">Coderwall</a>.
-	</li>
-	<li>
-		You could use <a href="https://gratipay.com/~lilithapp/">Gratipay</a>.
 	</li>
 	<li>
 		You could give me a nice review over at <a href="http://sourceforge.net/projects/lilith/">SourceForge</a>.
