--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -10,12 +10,12 @@
 		<h1>Lilith 8.2.0</h1>
 		<div>
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.2.0">Download Now!
-		<br />(Released: 2017-xx-xx)</a>
+		<br />(Released: 2018-xx-xx)</a>
 		</div>
 		
-		<p>This version of Lilith demands Java 8 update 151 or higher and will
+		<p>This version of Lilith demands Java 8 update 161 or higher and will
 		says so if you try to start it with an older version. It has also
-		been built and tested with Java 9.0.1.</p>
+		been built and tested with Java 9.0.4 and works with Java 10-ea+39.</p>
 		<p>You can still receive event from previous versions so if your
 		application is still running Java 7 or lower just keep using the
 		0.9.44 artifacts.<br />
@@ -44,7 +44,7 @@
 			<li>Don't add null events to global logs.</li>
 			<li>Unchecking "Enable global logs." in Preferences is now deleting existing global log files automatically.</li>
 			<li>Keyboard help will now always be up-to-date.</li>
-			<li>Demand Java 8 <code>1.8.0_151</code>.</li>
+			<li>Demand Java 8 <code>1.8.0_161</code>.</li>
 		</ul>
 
 		<h3>Deprecated</h3>
@@ -72,7 +72,7 @@
 			<li>Added more dependencies and entries to the deserialization whitelist. This is essentially necessary because <code>logback-access</code> does not have an <code>AccessEventVO</code>. See also <a href="http://jira.qos.ch/browse/LOGBACK-1182">LOGBACK-1182 - Problem deserializing AccessEvent.</a>.</li>
 			<li>Not all event producers expect a heartbeat.</li>
 			<li>Made sure that "You have changed the look &amp; feel." and "You have changed the application path." dialogs aren't hidden by the preferences dialog. </li>
-			<li>Logback 1.2.3, log4j2 2.9.1, Groovy 2.4.12, jackson 2.9.1, spring 5.0.1, protobuf 3.4.0, junique 1.0.4, jcommander 1.72, commons-lang 3.6, commons-text 1.1, flying-saucer 9.1.7, glazedlists 1.10.0, aspectj 1.8.12, httpcore 4.4.8</li>
+			<li>Logback 1.2.3, log4j2 2.10.0, Groovy 2.4.13, jackson 2.9.3, spring 5.0.2, protobuf 3.5.1, junique 1.0.4, jcommander 1.72, commons-lang 3.7, commons-text 1.1, commons-io 2.6, flying-saucer 9.1.11, glazedlists 1.10.0, aspectj 1.8.13, httpcore 4.4.9, httpclient 4.5.4</li>
 			<li>Fixed several split package issues. Because of this, some classes have changed package names:
 <ul><li>the two most commonly used classes <code>de.huxhorn.lilith.logback.appender.ClassicMultiplexSocketAppender</code> and <code>de.huxhorn.lilith.logback.encoder.ClassicLilithEncoder</code> have not been moved. </li>
 					<li>
@@ -164,9 +164,10 @@ See <a href="https://code.google.com/archive/p/flying-saucer/issues/105">Issue 1
 		</ul>
 		<hr />
 		<p>
-		Donate in <a href="bitcoin:19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn">Bitcoin</a>. - 19UjvmrDJMBcGDYQoFcrjYPqLRFPSwznZn<br />
-		Donate in <a href="litecoin:LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV">Litecoin</a>. - LU6WM3nmGJy3N5PEE8yQwsAyenJs8dtbmV<br />
-		Donate in <a href="dogecoin:DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm">Dogecoin</a>. - DJC1R683hfD4VSEDAJrvNpv6GsCg8ewvhm
+		Donate in <a href="bitcoin:3MwD28iwF3faSvKUBYNe2XuCzStBi1NzAH">Bitcoin</a>. - 3MwD28iwF3faSvKUBYNe2XuCzStBi1NzAH<br />
+		Donate in <a href="bitcoincash:18srjoaCdvV3i9XWKjDcnQA6UyNMxky5GA">Bitcoin Cash</a>. - 18srjoaCdvV3i9XWKjDcnQA6UyNMxky5GA<br />
+		Donate in <a href="zcash:t1TLsUKLsNczQbG4PVx7iNEyP5LtKauL3gr">Zcash</a>. - t1TLsUKLsNczQbG4PVx7iNEyP5LtKauL3gr<br />
+		Donate in <a href="litecoin:MPYHQnhjtv9nVFCoHF3UyPJAvhwqqZ2snx">Litecoin</a>. - MPYHQnhjtv9nVFCoHF3UyPJAvhwqqZ2snx
 		</p>
 	</body>
 </html>
