--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -33,6 +33,7 @@
 			<li>If the connection is lost then Message/RequestURI in table will now show "Connection closed." instead of nothing.</li>
 			<li>Added smooth horizontal table scrolling option that is enabled by default.</li>
 			<li>Added support for Log4j 2 <code>JsonLayout</code>, <code>YamlLayout</code> and <code>XmlLayout</code>. <code>SerializedLayout</code> has been deprecated in log4j2 2.9.0 so you should use one of the other options instead.</li>
+			<li>Added Automatic-Module-Names for artifacts.</li>
 		</ul>
 
 		<h3>Changed</h3>
