--- a/releases/8.2.0.xhtml
+++ b/releases/8.2.0.xhtml
@@ -10,12 +10,12 @@
 		<h1>Lilith 8.2.0</h1>
 		<div>
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.2.0">Download Now!
-		<br />(Released: 2018-xx-xx)</a>
+		<br />(Released: 2018-08-09)</a>
 		</div>
 		
-		<p>This version of Lilith demands Java 8 update 161 or higher and will
+		<p>This version of Lilith demands Java 8 update 181 or higher and will
 		says so if you try to start it with an older version. It has also
-		been built and tested with Java 9.0.4 and Java 10.</p>
+		been built and tested with Java 10.0.2.</p>
 		<p>You can still receive event from previous versions so if your
 		application is still running Java 7 or lower just keep using the
 		0.9.44 artifacts.<br />
@@ -45,7 +45,7 @@
 			<li>Don't add null events to global logs.</li>
 			<li>Unchecking "Enable global logs." in Preferences is now deleting existing global log files automatically.</li>
 			<li>Keyboard help will now always be up-to-date.</li>
-			<li>Demand Java 8 <code>1.8.0_161</code>.</li>
+			<li>Demand Java 8 <code>1.8.0_181</code>.</li>
 		</ul>
 
 		<h3>Deprecated</h3>
@@ -74,7 +74,7 @@
 			<li>Not all event producers expect a heartbeat.</li>
 			<li>Made sure that "You have changed the look &amp; feel." and "You have changed the application path." dialogs aren't hidden by the preferences dialog.</li>
 			<li>Fixed java executable detection in Windows bat file. Thanks, <a href="https://github.com/tha2015">tha2015</a>!</li>
-			<li>Logback 1.2.3, log4j2 2.11.0, Groovy 2.4.14, jackson 2.9.4, spring 5.0.4, protobuf 3.5.1, junique 1.0.4, jcommander 1.72, commons-lang 3.7, commons-text 1.1, commons-io 2.6, flying-saucer 9.1.12, glazedlists 1.10.0, aspectj 1.8.13, httpcore 4.4.9, httpclient 4.5.5</li>
+			<li>Logback 1.2.3, log4j2 2.11.1, Groovy 2.5.1, jackson 2.9.6, spring 5.0.8, protobuf 3.6.1, junique 1.0.4, jcommander 1.72, commons-lang 3.7, commons-text 1.4, commons-io 2.6, flying-saucer 9.1.14, glazedlists 1.10.0, aspectj 1.9.1, httpcore 4.4.10, httpclient 4.5.6, woodstox 5.1.0</li>
 			<li>Fixed several split package issues. Because of this, some classes have changed package names:
 <ul><li>the two most commonly used classes <code>de.huxhorn.lilith.logback.appender.ClassicMultiplexSocketAppender</code> and <code>de.huxhorn.lilith.logback.encoder.ClassicLilithEncoder</code> have not been moved. </li>
 					<li>
