--- a/releases/8.4.0.xhtml
+++ b/releases/8.4.0.xhtml
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>Lilith 8.3.0 Release Notes</title>
+		<title>Lilith 8.4.0 Release Notes</title>
 		<link href="help.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<h1>Lilith 8.3.0</h1>
+		<h1>Lilith 8.4.0</h1>
 		<div>
 			<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/8.3.0">Download Now!
-		<br />(Released: 2021-12-11)</a>
+		<br />(Released: 20xx-xx-xx)</a>
 		</div>
 		
 		<p>This version of Lilith demands Java 8 update 312 or higher and will
@@ -24,19 +24,7 @@
 		SE 7 End of Public Updates</a> has already been reached.</p>
 		
 		<h2>Changelog</h2>
-
-		<h3>Changed</h3>
-
-		<ul>
-		<li>Demand Java 8 <code>1.8.0_312</code>.</li>
-		</ul>
-
-		<h3>Fixed</h3>
-
-		<ul>
-		<li>SLF4J 1.7.32, logback 1.2.7, log4j2 2.15.0, Groovy 2.5.15, Spring 5.3.13, jackson 2.13.0, commons-io 2.11.0, commons-text 1.5, commons-lang3 3.12.0, flying-saucer 9.1.18, aspectj 1.9.7, woodstox 6.2.7, httpcore 4.4.14, httpclient 4.5.13, protobuf 3.19.1</li>
-		</ul>
-
+		
 		<h3>Known issues</h3>
 
 		<ul>
